make image search work

--- a/project0/image_search.html
+++ b/project0/image_search.html
@@ -11,7 +11,7 @@
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
-            <input type="text" name="sclient" value="img">
+            <input type="text" name="tbm" value="isch">
         </form>
     </body>
 </html>
