Add todos to appropriate pages

--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -8,6 +8,14 @@
             <a href="index.html">normal search</a>
             <a href="image_search.html">image searach</a>
         </div>
+        <!--TODO hould have support for the following
+                -Find pages with… “all these words:”
+                -Find pages with… “this exact word or phrase:”
+                -Find pages with… “any of these words:”
+                -Find pages with… “none of these words:”
+        -->
+        <!--TODO search options should be stacked vertically and left aligned -->
+        <!--TODO search button should be blue with white text -->
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
