--- a/project0/index.html
+++ b/project0/index.html
@@ -8,11 +8,14 @@
             <a href="advanced_search.html">advanced search</a>
             <a href="image_search.html">image searach</a>
         </div>
+        <!--TODO center search bar and add rounded corners-->
         <h1>Darkmode Google</h1>
         <h5>A google that's easier on the eyes</h5>
         <form action="https://google.com/search">
             <input type="text" name="q">
+            <!--TODO should be centered underneath search bar-->
             <input type="submit" value="Google Search">
+            <!--TODO add a I'm feeling luck button -->
         </form>
 
     </body>
