Add I'm feeling luck button

--- a/project0/index.html
+++ b/project0/index.html
@@ -16,6 +16,8 @@
             <!--TODO should be centered underneath search bar-->
             <input type="submit" value="Google Search">
             <!--TODO add a I'm feeling luck button -->
+            <input type="submit" name="btnI" value="I'm Feeling Lucky">
+            btnI=I%27m+Feeling+Lucky
         </form>
 
     </body>
