--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -8,16 +8,25 @@
             <a href="index.html">normal search</a>
             <a href="image_search.html">image searach</a>
         </div>
-        <!--TODO hould have support for the following
-                -Find pages with… “all these words:”
-                -Find pages with… “this exact word or phrase:”
-                -Find pages with… “any of these words:”
-                -Find pages with… “none of these words:”
-        -->
         <!--TODO search options should be stacked vertically and left aligned -->
         <!--TODO search button should be blue with white text -->
         <form action="https://google.com/search">
-            <input type="text" name="q">
+            <div>
+                <label>all these words:</label>
+                <input type="text" name="as_q">
+            </div>
+            <div>
+                <label>this exact word or phrase:</label>
+                <input type="text" name="as_epq">
+            </div>
+            <div>
+                <label>any of these words:</label>
+                <input type="text" name="as_oq">
+            </div>
+            <div>
+                <label>none of these words:</label>
+                <input type="text" name="as_eq">
+            </div>
             <input type="submit" value="Google Search">
         </form>
     </body>
