Remove all references to Dark Mode Google

--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Darkmode Advanced Search</title>
+        <title>Google Advanced Search</title>
     </head>
     <body>
         <div>
