--- a/project0/image_search.html
+++ b/project0/image_search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Darkmode Image Search</title>
+        <title>Google Image Search</title>
     </head>
     <body>
         <div>
