--- a/project0/index.html
+++ b/project0/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Darkmode Google</title>
+        <title>Google</title>
     </head>
     <body>
         <div>
@@ -9,8 +9,7 @@
             <a href="image_search.html">image searach</a>
         </div>
         <!--TODO center search bar and add rounded corners-->
-        <h1>Darkmode Google</h1>
-        <h5>A google that's easier on the eyes</h5>
+        <h1>Google</h1>
         <form action="https://google.com/search">
             <input type="text" name="q">
             <!--TODO should be centered underneath search bar-->
