--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -7,39 +7,57 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="container-fluid">
-        <div>
-            <a href="index.html">normal search</a>
-            <a href="image_search.html">image searach</a>
-        </div>
-        <form action="https://google.com/search">
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <div class="form-group row">
-                <label for="as_q" class="text-start col-sm-2 col-form-label">all these words:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="text" name="as_q">
-                </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="image_search.html">Image</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="advanced_search.html">Advanced</a>
+                    </li>
+                </ul>
             </div>
-            <div class="form-group row">
-                <label for="as_epq" class="text-start col-sm-2 col-form-label">this exact word or phrase:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="text" name="as_epq">
+        </nav>
+        <div class="container-fluid">
+            <h1 class="header-spacing">Google Advanced Search</h1>
+            <form action="https://google.com/search">
+                <div class="form-group row">
+                    <label for="as_q" class="text-start col-sm-2 col-form-label">all these words:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" type="text" name="as_q">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row">
-                <label for="as_oq" class="text-start col-sm-2 col-form-label">any of these words:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="text" name="as_oq">
+                <div class="form-group row">
+                    <label for="as_epq" class="text-start col-sm-2 col-form-label">this exact word or phrase:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" type="text" name="as_epq">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row">
-                <label for="as_eq" class="text-start col-sm-2 col-form-label">none of these words:</label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="text" name="as_eq">
+                <div class="form-group row">
+                    <label for="as_oq" class="text-start col-sm-2 col-form-label">any of these words:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" type="text" name="as_oq">
+                    </div>
                 </div>
-            </div>
-            <input class="btn btn-primary padding-top" type="submit" value="Google Search">
-        </form>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    </body>
+                <div class="form-group row">
+                    <label for="as_eq" class="text-start col-sm-2 col-form-label">none of these words:</label>
+                    <div class="col-sm-10">
+                        <input class="form-control" type="text" name="as_eq">
+                    </div>
+                </div>
+                <input class="btn btn-primary padding-top" type="submit" value="Google Search">
+            </form>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    </body>    </body>
 </html>
