--- a/project0/index.html
+++ b/project0/index.html
@@ -7,23 +7,41 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body class="container-fluid">
-        <div>
-            <a href="advanced_search.html">advanced search</a>
-            <a href="image_search.html">image searach</a>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="image_search.html">Image</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="advanced_search.html">Advanced</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container-fluid">
+            <h1 class="header-spacing">Google</h1>
+            <div id="standard-search-form">
+                <form action="https://google.com/search">
+                    <div class="input-group text-field center">
+                        <input class="form-control" type="text" name="q">
+                    </div>
+                    <div id="search-buttons" class="padding-top">
+                        <input type="submit" value="Google Search" class="btn btn-primary ">
+                        <input type="submit" name="btnI" value="I'm Feeling Lucky" class="btn btn-primary">
+                    </div>
+                </form>
+            </div>
         </div>
-        <h1>Google</h1>
-        <div id="standard-search-form">
-            <form action="https://google.com/search">
-                <div class="input-group text-field center">
-                    <input class="form-control" type="text" name="q">
-                </div>
-                <div id="search-buttons" class="padding-top">
-                    <input type="submit" value="Google Search" class="btn btn-light">
-                    <input type="submit" name="btnI" value="I'm Feeling Lucky" class="btn btn-light">
-                </div>
-            </form>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    </body>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    </body>    </body>
 </html>
